--- a/app/home/Home.css
+++ b/app/home/Home.css
@@ -1,4 +1,4 @@
-﻿/* Page-specific styling */
+/* Page-specific styling */
 .dropbtn {
     /* background-color: #4CAF50; */
     /* color: white; */
